added tests for 'StorageCapSettings': passing